--- a/src/style.css
+++ b/src/style.css
@@ -1,61 +1,115 @@
+/*
+CSS stylesheet for https://RundesBalli.com/
+
+https://RundesBalli.com/
+https://github.com/
+
+Sources:
+- Font-Awesome Free: https://fontawesome.com/start
+
+Contents:
+1. General
+2. Header
+3. Navigation
+4. Footer
+5. Grid
+6. Forms
+*/
+
+/*
+  1. General
+*/
+
+html, body {
+  padding: 0px;
+  margin: 0px;
+  background: #ededed;
+  width: 100%;
+  height: 100%;
+  font-family: sans-serif;
+  font-size: 20px;
+  color: #000000;
+}
+
+body {
+  display: flex;
+  flex-flow: column;
+}
+
 * {
   box-sizing: border-box;
 }
-html, body {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
-  background: #ededed;
-  color: #000000;
-}
+
 img {
   max-width: 100%;
   height: auto;
 }
+
+img.thumb {
+  border: 1px solid #000000;
+}
+
 a {
+  outline: none;
   color: #000000;
   text-decoration: underline;
+  cursor: pointer;
 }
-a:hover {
+
+a:active, a:hover, a:focus {
   color: #444444;
   text-decoration: none;
 }
-textarea {
-  background: #ededed;
-  color: #000000;
-  font-family: monospace;
-}
-#header {
-  margin: 3vh auto 1vh;
-  max-width: 1000px;
-}
-.wrapper {
-  width: 100%;
-  text-align: center;
-  font-size: 2vw;
-  color: #000000;
-  font-family: Helvetica, Arial, sans-serif;
-  margin: 3vw auto 0;
-}
-.wrapper span {
-  margin: 0 2vw;
-  font-size: 4vw;
-}
-.wrapper a.iconlink {
+
+.iconlink, .iconlink:active, .iconlink:hover, .iconlink:focus {
   text-decoration: none;
 }
-#info {
-  width: 100%;
+
+.warn {
+  color: #c52b2f;
+}
+
+.highlight {
+  color: #ee4d2e;
+}
+
+.bold {
+  font-weight: bold;
+}
+
+.italic {
+  font-style: italic;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.center {
   text-align: center;
-  color: #444444;
-  font-size: 1vw;
-  font-family: Helvetica, Arial, sans-serif;
-  margin: 3vw auto 0;
 }
-.spacer {
-  height: 1vh;
+
+.left {
+  float: left;
 }
+
+.right {
+  float: right;
+}
+
+.clear {
+  clear: both;
+}
+
+.bigger {
+  font-size: 22px;
+}
+
+/*
+1.1 Fontawesome
+https://fontawesome.com/
+*/
+
 @font-face {
   font-family: 'fontawesome-r';
   font-style: normal;
@@ -63,10 +117,12 @@ textarea {
   src: url("/src/webfonts/fa-regular-400.eot");
   src: url("/src/webfonts/fa-regular-400.eot?#iefix") format("embedded-opentype"), url("/src/webfonts/fa-regular-400.woff2") format("woff2"), url("/src/webfonts/fa-regular-400.woff") format("woff"), url("/src/webfonts/fa-regular-400.ttf") format("truetype"), url("/src/webfonts/fa-regular-400.svg#fontawesome") format("svg");
 }
+
 .far {
   font-family: 'fontawesome-r';
   font-weight: 400;
 }
+
 @font-face {
   font-family: 'fontawesome-s';
   font-style: normal;
@@ -74,10 +130,12 @@ textarea {
   src: url("/src/webfonts/fa-solid-900.eot");
   src: url("/src/webfonts/fa-solid-900.eot?#iefix") format("embedded-opentype"), url("/src/webfonts/fa-solid-900.woff2") format("woff2"), url("/src/webfonts/fa-solid-900.woff") format("woff"), url("/src/webfonts/fa-solid-900.ttf") format("truetype"), url("/src/webfonts/fa-solid-900.svg#fontawesome") format("svg");
 }
+
 .fas {
   font-family: 'fontawesome-s';
   font-weight: 900;
 }
+
 @font-face {
   font-family: 'fontawesome-b';
   font-style: normal;
@@ -87,4 +145,235 @@ textarea {
 
 .fab {
   font-family: 'fontawesome-b';
+}
+
+/*
+  2. Header
+*/
+
+#header {
+  flex: none;
+  text-align: center;
+  margin: 15px auto 10px;
+}
+
+#header .info {
+  font-family: monospace;
+  font-size: 14px;
+}
+
+#header a {
+  color: #000000;
+  text-decoration: none;
+}
+
+#header a:hover {
+  color: #444444;
+}
+
+/*
+  3. Navigation
+*/
+
+/*
+  entfällt
+*/
+
+/*
+  4. Footer
+*/
+
+#footer {
+  width: 100%;
+  background-color: #212121;
+  overflow: hidden;
+  text-align: center;
+  flex: none;
+  padding: 5px 0px;
+  font-size: 14px;
+}
+
+#footer a {
+  color: #888888;
+  text-decoration: none;
+}
+
+#footer a:hover {
+  color: #ededed;
+}
+
+/*
+  5. Grid
+*/
+
+#wrapper {
+  max-width: 1200px;
+  width: 100%;
+  margin: 12px auto;
+  flex: auto;
+}
+
+[class*="col-"] {
+  float: left;
+  padding: 5px 5px;
+  border: 0;
+}
+
+ /* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  [class*="col-"] {
+    padding: 5px 5px;
+  }
+  .col-x-0 {width: 0%; display: none;}
+  .col-x-1 {width: 8.33%;}
+  .col-x-2 {width: 16.66%;}
+  .col-x-3 {width: 25%;}
+  .col-x-4 {width: 33.33%;}
+  .col-x-5 {width: 41.66%;}
+  .col-x-6 {width: 50%;}
+  .col-x-7 {width: 58.33%;}
+  .col-x-8 {width: 66.66%;}
+  .col-x-9 {width: 75%;}
+  .col-x-10 {width: 83.33%;}
+  .col-x-11 {width: 91.66%;}
+  .col-x-12 {width: 100%;}
+}
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {
+  [class*="col-"] {
+    padding: 5px 8px;
+  }
+  .col-s-0 {width: 0%; display: none;}
+  .col-s-1 {width: 8.33%;}
+  .col-s-2 {width: 16.66%;}
+  .col-s-3 {width: 25%;}
+  .col-s-4 {width: 33.33%;}
+  .col-s-5 {width: 41.66%;}
+  .col-s-6 {width: 50%;}
+  .col-s-7 {width: 58.33%;}
+  .col-s-8 {width: 66.66%;}
+  .col-s-9 {width: 75%;}
+  .col-s-10 {width: 83.33%;}
+  .col-s-11 {width: 91.66%;}
+  .col-s-12 {width: 100%;}
+}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  [class*="col-"] {
+    padding: 7px 10px;
+  }
+  .col-m-0 {width: 0%; display: none;}
+  .col-m-1 {width: 8.33%;}
+  .col-m-2 {width: 16.66%;}
+  .col-m-3 {width: 25%;}
+  .col-m-4 {width: 33.33%;}
+  .col-m-5 {width: 41.66%;}
+  .col-m-6 {width: 50%;}
+  .col-m-7 {width: 58.33%;}
+  .col-m-8 {width: 66.66%;}
+  .col-m-9 {width: 75%;}
+  .col-m-10 {width: 83.33%;}
+  .col-m-11 {width: 91.66%;}
+  .col-m-12 {width: 100%;}
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {
+  [class*="col-"] {
+    padding: 8px 12px;
+  }
+  .col-l-0 {width: 0%; display: none;}
+  .col-l-1 {width: 8.33%;}
+  .col-l-2 {width: 16.66%;}
+  .col-l-3 {width: 25%;}
+  .col-l-4 {width: 33.33%;}
+  .col-l-5 {width: 41.66%;}
+  .col-l-6 {width: 50%;}
+  .col-l-7 {width: 58.33%;}
+  .col-l-8 {width: 66.66%;}
+  .col-l-9 {width: 75%;}
+  .col-l-10 {width: 83.33%;}
+  .col-l-11 {width: 91.66%;}
+  .col-l-12 {width: 100%;}
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  [class*="col-"] {
+    padding: 10px 15px;
+  }
+  .col-xl-0 {width: 0%; display: none;}
+  .col-xl-1 {width: 8.33%;}
+  .col-xl-2 {width: 16.66%;}
+  .col-xl-3 {width: 25%;}
+  .col-xl-4 {width: 33.33%;}
+  .col-xl-5 {width: 41.66%;}
+  .col-xl-6 {width: 50%;}
+  .col-xl-7 {width: 58.33%;}
+  .col-xl-8 {width: 66.66%;}
+  .col-xl-9 {width: 75%;}
+  .col-xl-10 {width: 83.33%;}
+  .col-xl-11 {width: 91.66%;}
+  .col-xl-12 {width: 100%;}
+}
+
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+.spacer-s {
+  height: 15px;
+}
+
+.spacer-m {
+  height: 30px;
+}
+
+.spacer-l {
+  height: 50px;
+}
+
+/*
+  6. Forms
+*/
+
+input[type=text], input[type=password], select, textarea {
+  width: 100%;
+  border: 1px solid #000000;
+  padding: 8px;
+  background-color: #ededed;
+  color: #000000;
+}
+
+textarea {
+  resize: none;
+  height: 120px;
+}
+
+input[type=text]:focus, input[type=password]:focus, select:focus, textarea:focus {
+  background-color: #ededed;
+  border: 1px solid #ee4d2e;
+  outline-color: #ee4d2e
+}
+
+input[type=submit], input[type=reset], input[type=button] {
+  width: 30%;
+  cursor: pointer;
+  padding: 8px 12px;
+  background-color: #ededed;
+  color: #000000;
+  border: 1px solid #000000;
+}
+
+input[type=submit]:hover, input[type=reset]:hover, input[type=button]:hover {
+  background-color: #ededed;
+}
+
+label {
+  display: inline-block;
+  color: #000000;
 }
