--- a/src/style.css
+++ b/src/style.css
@@ -209,6 +209,11 @@ https://fontawesome.com/
   padding: 5px 5px;
   border: 0;
 }
+@media only screen and (max-width: 1250px) {
+  .wrapper {
+    padding: 10px;
+  }
+}
 
  /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
