Darstellungen geändert und Klassen hinzugefügt

--- a/public/src/style.css
+++ b/public/src/style.css
@@ -68,8 +68,16 @@ hr {
   width: 100%;
 }
 
-pre {
+.pre {
   font-family: monospace;
+}
+
+.breakWord {
+  word-break: break-word;
+}
+
+.center {
+  text-align: center;
 }
 
 /*
