--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -53,6 +53,14 @@
   src: url("/assets/fonts/Roboto-Regular.ttf");
 }
 
+@font-face {
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-display: swap;
+  src: url("/assets/fonts/Roboto-Bold.ttf");
+}
+
 html {
   width: 100%;
   height: 100%;
