--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -79,12 +79,15 @@ body {
   font-size: var(--fontSize);
   display: flex;
   flex-direction: column;
-  text-shadow: 1px 1px 1px var(--shadowColor);
 }
 
 img {
   max-width: 100%;
   height: auto;
+}
+
+.imgShadow {
+  box-shadow: 4px 4px 3px var(--shadowColor);
 }
 
 a {
@@ -260,7 +263,7 @@ h1 .iconright, h2 .iconright, h3 .iconright {
   margin: 15px auto;
   max-width: 1200px;
   width: 100%;
-  text-shadow: 1px 2px 1px var(--shadowColor);
+  text-shadow: 2px 2px 2px var(--shadowColor);
 }
 
 #navbar > a {
@@ -308,7 +311,7 @@ h1 .iconright, h2 .iconright, h3 .iconright {
   padding: 5px 0px;
   font-size: calc(var(--fontSize) * 0.65);
   box-shadow: 0px -1px 6px var(--shadowColor);
-  text-shadow: 1px 2px 1px var(--shadowColor);
+  text-shadow: 1px 1px 1px var(--shadowColor);
 }
 
 #footer a {
@@ -334,7 +337,7 @@ h1 .iconright, h2 .iconright, h3 .iconright {
   width: 100%;
   margin: 0px auto calc(var(--fontSize) * 3);
   flex: auto;
-  text-shadow: 1px 2px 1px var(--shadowColor);
+  text-shadow: 2px 2px 1px var(--shadowColor);
 }
 
 [class*="col-"] {
