--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -89,8 +89,9 @@ img {
   height: auto;
 }
 
-.imgShadow {
-  box-shadow: 4px 4px 3px var(--shadowColor);
+.imgGlow {
+  box-shadow: 0px 0px calc(var(--fontSize) * 0.6) var(--fontColor);
+  border-radius: calc(var(--fontSize) * 0.6);
 }
 
 a {
