--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -106,6 +106,11 @@ a:active, a:hover, a:focus {
   text-decoration: underline;
 }
 
+p {
+  text-align: center;
+  margin: var(--fontSize) auto;
+}
+
 h1, h2, h3 {
   text-align: center;
   word-break: break-word;
