--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -440,3 +440,37 @@ input:not([type=checkbox]):not([type=radio]):focus, select:focus {
     width: 100%;
   }
 }
+
+/**
+ * 7. Tables
+ */
+table {
+  min-width: 40%;
+  max-width: 100%;
+  border-collapse: collapse;
+  box-shadow: 2px 2px 5px var(--shadowColor);
+  transition: all var(--transitionTime);
+  margin: 0 auto;
+}
+
+th, td {
+  border: 1px solid var(--fontColorDimmed);
+  padding: calc(var(--fontSize) * 0.3) calc(var(--fontSize) * 0.6);
+}
+
+th {
+  color: var(--highlightColor);
+  font-weight: bold;
+}
+
+tr:not(th):hover {
+  background-color: var(--hoverColor);
+}
+
+.overflowXAuto {
+  overflow-x: auto;
+}
+
+.noBreak {
+  white-space: nowrap;
+}
