--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -17,6 +17,7 @@
   --shadowColor: #000000;
   --hrColor: rgba(255, 248, 240, 0.75);
   --codeBackgroundColor: rgba(255, 248, 240, 0.2);
+  --tableHoverColor: rgba(0, 0, 0, 0.2);
 
   /**
    * Sizes
@@ -441,7 +442,7 @@ th {
 }
 
 tr:not(th):hover {
-  background-color: var(--fontColorDimmed);
+  background-color: var(--tableHoverColor);
 }
 
 .overflowXAuto {
