Rearranged site title

--- a/includes/templates/template.html
+++ b/includes/templates/template.html
@@ -5,7 +5,7 @@ https://github.com/RundesBalli
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>{TITLE}RundesBalli.com</title>
+    <title>RundesBalli.com{TITLE}</title>
     <meta charset="utf-8">
     <meta name="description" content="RundesBalli.com Homepage"/>
     <meta name="robots" content="index, follow"/>
