--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -308,7 +308,7 @@ nav > a > span.icon {
   padding: 0px calc(var(--basicSpacingSize) * 0.6) 0px 0px;
 }
 
-nav a:hover, nav a:active, nav a:focus {
+nav a:hover, nav a:focus {
   color: var(--fontColor);
   background-color: var(--highlightColor1Dimmed);
   border: 2px solid var(--highlightColor1);
@@ -323,7 +323,7 @@ nav > #toggleElement {
     margin-right: calc(var(--basicSpacingSize) * 0.6);
   }
 
-  nav a:hover, nav a:active, nav a:focus {
+  nav a:hover, nav a:focus {
     transform: scale(1.1);
     box-shadow: 1px 1px 7px var(--shadowColor);
   }
