Added smooth scroll behavior to whole website

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -142,6 +142,10 @@ html, body {
   margin: 0px;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   background: var(--backgroundColor) var(--backgroundImage) 0 0 repeat;
   font-family: 'Roboto', sans-serif;
