--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -246,6 +246,10 @@ code {
   color: var(--fontColorDimmed);
 }
 
+.small {
+  font-size: calc(var(--fontSize) * 0.7);
+}
+
 .help {
   cursor: help;
 }
