--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -317,7 +317,7 @@ nav > a > span.icon {
   padding: 0px calc(var(--basicSpacingSize) * 0.6) 0px 0px;
 }
 
-nav a:hover, nav a:focus {
+nav a:hover {
   color: var(--fontColor);
   background-color: var(--highlightColor1Dimmed);
   border: 2px solid var(--highlightColor1);
