Changed highlightColor2 to a more green/blue color

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -9,8 +9,8 @@
 
   --highlightColor1: #FF6600;
   --highlightColor1Dimmed: #973c00;
-  --highlightColor2: #256EFF;
-  --highlightColor2Dimmed: #002e8a;
+  --highlightColor2: #5CA4A9;
+  --highlightColor2Dimmed: #2A4E50;
 
   --buttonBackgroundColor: #0E273C;
   --tileBackgroundColor: #0E273C;
