Typo / wrong order

--- a/includes/templates/template.html
+++ b/includes/templates/template.html
@@ -16,7 +16,7 @@ https://github.com/RundesBalli
     <link rel="shortcut icon" href="/assets/images/favicon.svg" type="image/svg+xml">
     <meta name="theme-color" content="#0E273C">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta property="og:title" content="{TITLE}RundesBalli.com">
+    <meta property="og:title" content="RundesBalli.com{TITLE}">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://RundesBalli.com{REQUESTURI}">
     <meta property="og:image" content="https://RundesBalli.com/assets/images/logo.png">
