Mobile nav links are now block elements

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -354,7 +354,7 @@ nav > #toggleElement {
   }
 
   nav.responsive a:not(#toggleElement) {
-    display: inline-block;
+    display: block;
   }
 
   nav > #toggleElement {
